<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rshipp_a2.rshipp_a2.OptionsActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/players_text"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/players_radio_group" >
            <RadioButton
                android:id="@+id/players_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_radio"/>
            <RadioButton
                android:id="@+id/players_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_radio"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_text"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/first_radio_group" >
            <RadioButton
                android:id="@+id/x_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/x_radio"/>
            <RadioButton
                android:id="@+id/o_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/o_radio"/>
        </RadioGroup>

        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_button"/>
    </LinearLayout>

</RelativeLayout>
