<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rshipp_a2.rshipp_a2.GameActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:text="@string/score_x_text"
            android:id="@+id/textView"/>
        <TextView
            android:id="@+id/score_x_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_draw_text" />
        <TextView
            android:id="@+id/score_draw_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:text="@string/score_o_text"/>
        <TextView
            android:id="@+id/score_o_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"/>
    </LinearLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/grid_layout"
        android:layout_below="@+id/linearLayout"
        android:layout_centerInParent="true"
        android:layout_margin="16dp" >

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageButton1"
            android:layout_row="0"
            android:layout_column="0"/>

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageButton2"
            android:layout_row="0"
            android:layout_column="1"/>

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageButton3"
            android:layout_row="0"
            android:layout_column="2"/>

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageButton4"
            android:layout_row="1"
            android:layout_column="0"/>

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageButton5"
            android:layout_row="1"
            android:layout_column="1"/>

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageButton6"
            android:layout_row="1"
            android:layout_column="2"/>

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageButton7"
            android:layout_row="2"
            android:layout_column="0"/>

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageButton8"
            android:layout_row="2"
            android:layout_column="1"/>

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageButton9"
            android:layout_row="2"
            android:layout_column="2"/>

    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/grid_layout"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <Button
            android:id="@+id/play_again_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_again_button"/>
        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_back_button"/>

    </LinearLayout>

</RelativeLayout>
